--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
     </head>
     <body>
         <header>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 600" width="100" height="100">
+                <style>
+                    .wave {
+                        fill: #bd93f9;
+                        animation: wave 4s ease-in-out infinite;
+                        transform-origin: center bottom;
+                    }
+        
+                    @keyframes wave {
+                        0% {
+                            transform: scaleY(1);
+                        }
+                        50% {
+                            transform: scaleY(0.8);
+                        }
+                        100% {
+                            transform: scaleY(1);
+                        }
+                    }
+                </style>
+                <path class="wave" d="M0,600c0,0,0-200,200-200s200,200,400,200s200-200,200-200v200H0z"/>
+            </svg>
             <h1>Üdvözöljük a Sweetwater s.r.o.-nál</h1>
             <nav>
                 <ul>
@@ -34,7 +56,7 @@
                 <p>A cég 2022-ben lett megalapítva.</p>
                 <p>Munkáink:</p>
                 <ol>
-                    <li>Kocsolaik halastavak állapotfelmérése és megújítási terv kidolgozása.</li>
+                    <li>Kocsolai halastavak állapotfelmérése és megújítási terv kidolgozása.</li>
                 </ol>
             </section>
             <section id="services">
@@ -48,7 +70,7 @@
                 <h2>Kapcsolat</h2>
                 <p>Kérjük, lépjen velünk kapcsolatba bármilyen kérdéssel vagy érdeklődéssel kapcsolatban:</p>
                 <ul>
-                    <li>Email: info@sweetwater.sk</li>
+                    <li>Email: <a href="mailto:info@sweetwater.sk">info@sweetwater.sk</a></li>
                     <li>Cím: 943 01 Štúrovo, Komenského 317/135, Slovakia</li>
                 </ul>
             </section>
